--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@
     padding: 1rem 2rem 0 2rem;
 }
 
-.app__navbar ul li{
+.app__navbar .app__navbar-links li{
     margin: 0 1rem;
 }
 
@@ -79,7 +79,8 @@
 .app__navbar-smallscreens_links li{
     color: var(--color-golden);
     font-family:var(--font-base);
-    margin: 2rem 0;
+    margin: 1rem 0;
+    font-size: 16px;
    
 }
 
