--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,10 +8,6 @@
     padding: 1rem 2rem 0 2rem;
 }
 
-.app__navbar .app__navbar-links li{
-    margin: 0 1rem;
-}
-
 .app__navbar-logo img{
     width: 210px;
 }
@@ -24,8 +20,20 @@
     flex: 1;
 }
 
+.app__navbar .app__navbar-links li{
+    margin: 0 1rem;
+}
+
+.app__navbar .app__navbar-links li:hover{
+    color: var(--color-grey);
+}
+
 .app__navbar-login{
     display: flex;
+}
+
+.app__navbar-login a:hover{
+    border-bottom: 1px solid var(--color-golden);
 }
 
 .app__navbar-login_dash{
