--- a/src/components/Menuitem/MenuItem.css
+++ b/src/components/Menuitem/MenuItem.css
@@ -32,3 +32,14 @@
 .app__specialmenu-section_tags p{
     color: rgb(170, 170, 170);
 }
+
+@media screen and (max-width:768px){
+    .app__specialmenu-section{
+        width: 100%;
+        display: flex;
+    }
+
+    .app__specialmenu-section_head_dash{
+        width: 100px;
+    }
+}
