--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -84,3 +84,44 @@
     font-size: 2rem;
     margin: 0 1rem;
 }
+
+.app__gallery-content_buttons .app__gallery-button:hover{
+    color: var(--color-white);
+}
+
+@media screen and (max-width:925px){
+    .app__gallery-images{
+        min-width: 90%;
+        margin-top: 3rem;
+    }
+
+    .app__gallery-content_buttons{
+        position: absolute;
+        bottom: 25%;
+    }
+}
+
+@media screen and (max-width:769px){
+    
+    .app__gallery-images{
+        min-width: 100%;
+    }  
+
+    .app__gallery-card{
+        position: relative;
+        min-width: 301px;
+        height: 400px;
+        margin-right: 2rem;
+    }
+
+    .app__gallery-content_buttons{
+        bottom: 20%;
+    }
+
+}
+
+@media screen and (max-width:500px){
+    .app__gallery-content_buttons{
+        bottom: 5%;
+    }
+}
